fix overflow scrollbar

--- a/src/app.css
+++ b/src/app.css
@@ -1,1 +1,18 @@
 @import "tailwindcss";
+/* @tailwind base; */
+/* @tailwind components; */
+/* @tailwind utilities; */
+
+@layer base {
+  ::-webkit-scrollbar-thumb {
+    @apply bg-transparent shadow-sm
+  }
+
+  ::-webkit-scrollbar {
+    @apply w-1 bg-transparent
+  }
+
+  ::-webkit-scrollbar-thumb {
+    @apply rounded-md bg-gray-700/50
+  }
+}
